--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   db:
     platform: linux/x86_64
     image: mysql:5.7
+    container_name: mysql57
     environment:
       - MYSQL_ROOT_PASSWORD=secret
     ports:
@@ -23,6 +24,7 @@ services:
       context: ./
       target: builder
     image: project
+    container_name: project
     # env_file: .env.dev
     expose:
       - "8080"
