--- a/dev.env
+++ b/dev.env
@@ -1,7 +1,16 @@
+#mysql
 DB_DRIVER=mysql
 DB_SOURCE=root:root@tcp(db:3306)/project?charset=utf8mb4&parseTime=True&loc=Local
 
+#gin server
 SERVER_ADDRESS=0.0.0.0:8080
 
+#jwt
 TOKEN_SECRET_KEY=12345678901234567890123456789012
-TOKEN_DURATION=60m #time.Minute
+REFRESH_TOKEN_SECRET_KEY=abc12345678901234567890123456789012
+TOKEN_DURATION=3m #time.Minute
+
+#redis
+REDIS_ADDR=redis:6379
+REDIS_PWD=""
+REDIS_DB=0
