--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,13 @@ services:
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    container_name: redis
+    volumes:
+      - "redisdata:/data"
   project:
     build:
       context: ./
@@ -32,7 +39,7 @@ services:
       - "8080"
     depends_on:
       - db
-      # - redis-account
+      - redis
       - reverse-proxy
     labels:
       - "traefik.enable=true"
